--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </head>
     <body>
 
-        <img src="img/banner.jpg" alt="">
+        <img src="img/banner.jpg" alt="imagem da barbearia">
 
-        <div>
+        <div class="principal" >
 
             <h1> Sobre a Barbearia Alura </h1>
 
@@ -26,16 +26,18 @@
         
 
 
-        <div>
+        <div class="beneficios">
 
             <h2>Beneficios</h2>
 
             <ul>
-                <li>  * Atendimento aos clientes  </li>
-                <li>  * Espaço diferenciado  </li>
-                <li>  * Localização  </li>
-                <li>  * Profissionais Qualificados  </li>
+                <li>  Atendimento aos clientes  </li>
+                <li>  Espaço diferenciado  </li>
+                <li>  Localização  </li>
+                <li>  Profissionais Qualificados  </li>
             </ul>
+
+            <img src="img/beneficios.jpg" alt="Beneficios da Barbearia" class="imagembeneficios"  >
             
         </div>
 
