--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div class="caixa">
                 <h1><img src="logo.png"></h1>
                 <nav>
                     <ul>
@@ -42,6 +42,11 @@
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <img src="img/logo-branco.png" alt="">
+            <p class="copyright"> &copy;copyright Barbearia Alura - 2023 por Kauane Pereira</p>
+        </footer>
 
     </body>
 </html>
